sumo/tests/duarouter/trips/errors/vehicle_empty_arrivalspeed/errors.duarouter
Error: Invalid arrivalspeed definition for vehicle ''
Quitting (on error).
